--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "cerbero/query-filters": "^1.3",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
+        "league/fractal": "^0.17.0",
         "tymon/jwt-auth": "^0.5.12"
     },
     "require-dev": {
